# LiveStockPriceCalculator

./: Cargo.toml  README.md
Assignment 2/: README.txt  assn2-2.rkt  assn2-a.rkt  assn2-aaa.rkt  assn2.rkt  assn2.rkt~  new copy.rkt  new.rkt  new.rkt~
Assignment 2/finalproduct/a2/: assn2.rkt  assn2.rkt~
Assignment 3/: README.txt  assn3-library.rkt  assn3.rkt  assn3.rkt~  assn3amil.rkt  assn3amil1.rkt  assn3amil1.rkt~  assn3and.rkt  assn3and.rkt~
Assignment 3/compiled/drracket/errortrace/: assn3-library_rkt.dep  assn3-library_rkt.zo
Assignment 4/: README.txt  assn4mee.rkt  assn4mee.rkt~
Assingment 1/: .cshrc  README.txt  as1.rkt~  assn1-racket-plai-practice.rkt  assn1-racket-plai-practice.rkt~
Term Project/: Cargo.toml  README.md
Term Project/src/: loop.fs  main.rs
src/: k-means.rs  main.rs
