[package]
name = "cs311_project"
version = "0.1.0"
authors = ["b8p0b <se77enn@gmail.com>"]

[dependencies]
reqwest = "0.9.5"
base64 = "0.9"
bytes = "0.4"
encoding_rs = "0.8"
futures = "0.1.23"
http = "0.1.10"
hyper = "0.12.13"
hyper-old-types = { version = "0.11", optional = true, features = ["compat"] }
hyper-tls = { version = "0.3", optional = true }
libflate = "0.1.18"
log = "0.4"
mime = "0.3.7"
mime_guess = "2.0.0-alpha.6"
native-tls = { version = "0.2", optional = true }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"
tokio = "0.1.7"
tokio-io = "0.1"
url = "1.2"
uuid = { version = "0.7", features = ["v4"] }
serde_derive = "1.0"

[dev-dependencies]
env_logger = "0.6"
serde_derive = "1.0"

[features]
default = ["default-tls"]
hyper-011 = ["hyper-old-types"]
default-tls = ["hyper-tls", "native-tls"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs_workaround"]
